# ACLLib

./: .editorconfig  .gitignore  .gitmodules  ACLLib.cbp  CMakeLists.txt  Roadmap.md  index.html  params.json
basic/: basicTestRunner
examples/: .gitignore  CMakeLists.txt  Makefile  char.c  network.c
src/: CMakeLists.txt
src/common/: acllib.h
src/gtk/: CMakeLists.txt  acllib.c
src/qt/: acllib.cpp  window.cpp
src/qt/components/: PaintArea.cpp
src/qt/functionalities/: acllib.cpp
src/sdl/: CMakeLists.txt  acllib.c  acllib_gl.c
src/sdl/functionalities/: events.c  paint.c
src/win32/: acllib.c
test/: CMakeLists.txt
test/basic/: CMakeLists.txt
